adding logic to home page

--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,15 @@
     </footer>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <!-- <script src="./app/scripts/main.js"></script> -->
+    
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="bower_components/angular-css/angular-css.min.js"></script>
 
     <script src="./app/scripts/app.js"></script>
+    <script src="./app/scripts/services/dataService.js"></script>
+    <script src="./app/scripts/directives/carouselDirective.js"></script>
     <script src="./app/scripts/controllers/HomeController.js"></script>
     <script src="./app/scripts/controllers/ShopController.js"></script>
     <script src="./app/scripts/controllers/CartController.js"></script>
