adding logic to shopping page

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             <li><a href="/">Grocery Cloud</a></li>
         </ul>
         <ul>
-            <li><a href="/shop">Shop All</a></li>
+            <li><a href="/shopping">Shop All</a></li>
             <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
     </nav>
@@ -49,5 +49,6 @@
     <script src="./app/scripts/controllers/CartController.js"></script>
     <script src="./app/scripts/controllers/AboutController.js"></script>
     <script src="./app/scripts/controllers/ContactController.js"></script>
+    <script src="./app/scripts/controllers/ProductController.js"></script>
 </body>
 </html>
