adding logic to cart page

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
 
     <script src="./app/scripts/app.js"></script>
     <script src="./app/scripts/services/dataService.js"></script>
+    <script src="./app/scripts/services/cartService.js"></script>
     <script src="./app/scripts/directives/carouselDirective.js"></script>
     <script src="./app/scripts/controllers/HomeController.js"></script>
     <script src="./app/scripts/controllers/ShopController.js"></script>
