minor code refactor

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,10 @@
     <script src="./app/scripts/app.js"></script>
     <script src="./app/scripts/services/dataService.js"></script>
     <script src="./app/scripts/services/cartService.js"></script>
+    <script src="./app/scripts/services/locationService.js"></script>
+    <script src="./app/scripts/services/initService.js"></script>
+    <script src="./app/scripts/services/shopControllerService.js"></script>
+    <script src="./app/scripts/services/cartControllerService.js"></script>
     <script src="./app/scripts/directives/carouselDirective.js"></script>
     <script src="./app/scripts/controllers/HomeController.js"></script>
     <script src="./app/scripts/controllers/ShopController.js"></script>
