styled nav and footer

--- a/public/index.html
+++ b/public/index.html
@@ -7,31 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="app/styles/css/main.css">
+    <link rel="stylesheet" href="app/styles/css/style.css">
 
     <base href="/">
 </head>
 <body>
 
-    <nav>
-        <ul>
-            <li><a href="/">Grocery Cloud</a></li>
-        </ul>
-        <ul>
-            <li><a href="/shopping">Shop All</a></li>
-            <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
-        </ul>
-    </nav>
+    <nav-directive></nav-directive>
 
     <div ng-view></div>
 
     <footer>
-        <p>&copy; Grocery Cloud 2018</p>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
-        </ul>
+        <div class="container">
+            <p>&copy; Grocery Cloud 2018</p>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+        </div>
     </footer>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -39,7 +33,6 @@
     
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
-    <script src="bower_components/angular-css/angular-css.min.js"></script>
 
     <script src="./app/scripts/app.js"></script>
     <script src="./app/scripts/services/dataService.js"></script>
@@ -49,6 +42,7 @@
     <script src="./app/scripts/services/shopControllerService.js"></script>
     <script src="./app/scripts/services/cartControllerService.js"></script>
     <script src="./app/scripts/directives/carouselDirective.js"></script>
+    <script src="./app/scripts/directives/navDirective.js"></script>
     <script src="./app/scripts/controllers/HomeController.js"></script>
     <script src="./app/scripts/controllers/ShopController.js"></script>
     <script src="./app/scripts/controllers/CartController.js"></script>
