--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/fontawesome-all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,600" rel="stylesheet">
     <link rel="stylesheet" href="app/styles/css/style.css">
 
     <base href="/">
