styled shopping page

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
     <script src="./app/scripts/services/cartControllerService.js"></script>
     <script src="./app/scripts/directives/carouselDirective.js"></script>
     <script src="./app/scripts/directives/navDirective.js"></script>
+    <script src="./app/scripts/directives/topDirective.js"></script>
     <script src="./app/scripts/controllers/HomeController.js"></script>
     <script src="./app/scripts/controllers/ShopController.js"></script>
     <script src="./app/scripts/controllers/CartController.js"></script>
