--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,600" rel="stylesheet">
     <link rel="stylesheet" href="app/styles/css/style.css">
-
+    <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
     <base href="/">
 </head>
 <body>
@@ -36,6 +36,8 @@
     
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src='bower_components/angular-loading-bar/build/loading-bar.min.js'></script>
 
     <script src="./app/scripts/app.js"></script>
     <script src="./app/scripts/services/dataService.js"></script>
