--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/css/main.css">
     <!-- endbuild -->
     <base href="/">
   </head>
