shop now maintains state, kindof

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
         <script src="scripts/services/cartService.js"></script>
         <script src="scripts/services/locationService.js"></script>
         <script src="scripts/services/initService.js"></script>
+        <script src="scripts/services/shopStateService.js"></script>
         <script src="scripts/services/shopControllerService.js"></script>
         <script src="scripts/services/cartControllerService.js"></script>
         <script src="scripts/directives/carouselDirective.js"></script>
